# monika-moe

./: .gitignore  Cargo.toml  db.sql  main.js  package-lock.json  package.json
api/: Cargo.toml  server.js
api/src/: main.rs
cdn/: Cargo.toml  server.js
cdn/src/: main.rs
config/: database.json  settings.json  settings.toml
modules/: database.js  fetcher.js  fileManager.js  random.js
public/: index.html
public/css/: style.css
public/scripts/: config.json  script.js
