[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros"] }

# for better logging
env_logger = "0.10"
log = "0.4"