[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
